name:                mmdoc
version:             0.1.0.0
synopsis:            A parser for a subset of MetaModelica
-- description:
homepage:            http://www.github.com/bergmark/mmparser
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@edea.se
-- copyright:
category:            Language
build-type:          Custom
cabal-version:       >=1.8

data-files:
  static/Index.js
  static/index.css
  static/jquery.js

executable main
  hs-source-dirs:    src
  ghc-options:       -Wall
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5,
                     blaze-html,
                     directory,
                     filepath,
                     markdown,
                     mtl,
                     groom,
                     parsec,
                     split,
                     text

executable test
  hs-source-dirs:    src
  ghc-options:       -Wall
  main-is:           Test.hs
  build-depends:     base >= 4 && < 5,
                     HUnit,
                     directory,
                     filepath,
                     mtl,
                     groom,
                     test-framework,
                     test-framework-hunit,
                     parsec,
                     split

